2015-12-20  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-0): Match list
	of commands against PMS.
	(ebuild-mode-keywords-EAPI): New variable, contains only "EAPI".
	(ebuild-mode-keywords-eapi6): New variable, EAPI 6 commands.
	(ebuild-mode-keywords-eapi-deprecated)
	(ebuild-mode-keywords-eclass-deprecated): New variables, splitting
	ebuild-mode-keywords-deprecated.
	(ebuild-mode-keywords-eclass): Variable removed, merged into
	ebuild-mode-keywords-0.

2015-08-23  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.28 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

2015-08-09  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-insert-skeleton): Insert $Id$
	instead of $Header$, following the Git migration.

2014-11-18  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.27 released.

2014-11-17  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

	* keyword-generation.sh (OBSOLETE): Cleanup list, some eclasses
	have been removed.

2014-02-02  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.26 released.

2014-01-25  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

	* keyword-generation.sh: Exclude functions that are marked as
	internal in eclass documentation.

2014-01-23  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.25 released.

2014-01-22  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

	* keyword-generation.sh (ECLASSES, ECLASSFILES): Avoid deprecated
	"portageq portdir" call.

2013-10-10  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el
	(ebuild-mode-keywords-eclass-documentation): Add new keywords
	@BUGREPORTS and @VCSURL from eclass-to-manpage.awk.

2013-09-18  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-insert-skeleton): Remove special
	treatment for EAPI=0.

2013-09-17  Ulrich Müller  <ulm@gentoo.org>
