@@ -1,5 +1,7 @@
 2015-12-20  Ulrich Müller  <ulm@gentoo.org>
 
+	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.
+
 	* ebuild-mode-keywords.el (ebuild-mode-keywords-0): Match list
 	of commands against PMS.
 	(ebuild-mode-keywords-EAPI): New variable, contains only "EAPI".
